[gd_scene load_steps=19 format=3 uid="uid://ck7n88twxlt0n"]

[ext_resource type="Script" uid="uid://er4s28323y1h" path="res://scripts/controllers/player/PlayerController.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://2fos4e6tsysg" path="res://sprites/player_character/player_character_fall.png" id="2_ur7pv"]
[ext_resource type="Texture2D" uid="uid://tyhvnif2qfng" path="res://sprites/player_character/player_character_idle.png" id="3_y4r1p"]
[ext_resource type="Texture2D" uid="uid://dw6sb7tesxusb" path="res://sprites/player_character/player_character_jump.png" id="4_d2wvv"]
[ext_resource type="Texture2D" uid="uid://cs1rsdpywh5fo" path="res://sprites/player_character/player_character_walk.png" id="5_3v2ag"]
[ext_resource type="Script" uid="uid://by1s7vmqc7ssu" path="res://scripts/fsm/state_machine.gd" id="10_f1ej7"]
[ext_resource type="Script" uid="uid://b1ak6ktbh3de8" path="res://scripts/controllers/player/fsm/state_player_fall.gd" id="11_oprun"]
[ext_resource type="Script" uid="uid://cmnhpmpn84jfn" path="res://scripts/controllers/player/fsm/state_player_idle.gd" id="12_a8ls1"]
[ext_resource type="Script" uid="uid://bhqj1qi2qipaq" path="res://scripts/controllers/player/fsm/state_player_jump.gd" id="13_qfm1y"]
[ext_resource type="Script" uid="uid://i432u15t8vu6" path="res://scripts/controllers/player/fsm/state_player_walk.gd" id="14_fulsm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2els"]
size = Vector2(4, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("3_y4r1p")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("3_y4r1p")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("5_3v2ag")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("5_3v2ag")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = ExtResource("5_3v2ag")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = ExtResource("5_3v2ag")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_qlg0r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ur7pv")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}],
"loop": true,
"name": &"idle",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_d2wvv")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("_ui_controller", "_player_sprite") groups=["player"]]
script = ExtResource("1_g2els")
speed = 150.0
jump_velocity = -250.0
acceleration = 150.0
deceleration = 500.0
floor_drag = 900.0
_ui_controller = NodePath("")
_player_sprite = NodePath("PlayerSprite")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_g2els")

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
z_index = 1
sprite_frames = SubResource("SpriteFrames_qlg0r")
animation = &"fall"
autoplay = "idle"

[node name="Camera2D" type="Camera2D" parent="."]
visibility_layer = 513
zoom = Vector2(2, 2)
position_smoothing_enabled = true

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("10_f1ej7")
initial_state = NodePath("StatePlayerIdle")
metadata/_custom_type_script = "uid://by1s7vmqc7ssu"

[node name="StatePlayerFall" type="Node" parent="StateMachine" node_paths=PackedStringArray("player_animated_sprite", "player_controller", "_fsm")]
script = ExtResource("11_oprun")
player_animated_sprite = NodePath("../../PlayerSprite")
player_controller = NodePath("../..")
_fsm = NodePath("..")
metadata/_custom_type_script = "uid://b1ak6ktbh3de8"

[node name="StatePlayerIdle" type="Node" parent="StateMachine" node_paths=PackedStringArray("player_animated_sprite", "player_controller", "_fsm")]
script = ExtResource("12_a8ls1")
player_animated_sprite = NodePath("../../PlayerSprite")
player_controller = NodePath("../..")
_fsm = NodePath("..")
metadata/_custom_type_script = "uid://cmnhpmpn84jfn"

[node name="StatePlayerJump" type="Node" parent="StateMachine" node_paths=PackedStringArray("player_animated_sprite", "player_controller", "_fsm")]
script = ExtResource("13_qfm1y")
player_animated_sprite = NodePath("../../PlayerSprite")
player_controller = NodePath("../..")
_fsm = NodePath("..")
metadata/_custom_type_script = "uid://bhqj1qi2qipaq"

[node name="StatePlayerWalk" type="Node" parent="StateMachine" node_paths=PackedStringArray("player_animated_sprite", "player_controller", "_fsm")]
script = ExtResource("14_fulsm")
player_animated_sprite = NodePath("../../PlayerSprite")
player_controller = NodePath("../..")
_fsm = NodePath("..")
metadata/_custom_type_script = "uid://i432u15t8vu6"
